// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput component should render with all the props given 1`] = `
<div>
  <div
    class="sc-iBPRYJ fScuuL"
  >
    <label
      class="sc-bdfBwQ gowKKC"
    >
      Invalid File
    </label>
    <label
      class="sc-gKsewC cAKvTz"
    >
      <span
        class="sc-jSgupP hjrfqr"
      >
        Browse
      </span>
      <span
        class="sc-eCssSg dqsnRY"
      >
        Chose file
      </span>
      <input
        class="sc-hKgILt gCeYRd"
        type="file"
      />
    </label>
  </div>
</div>
`;

exports[`FileInput component should render with default theme 1`] = `
<div>
  <div
    class="sc-iBPRYJ fScuuL"
  >
    <label
      class="sc-bdfBwQ gowKKC"
    />
    <label
      class="sc-gKsewC hBmODz"
    >
      <span
        class="sc-jSgupP hYGisR"
      >
        Browse
      </span>
      <span
        class="sc-eCssSg eOtcvt"
      >
        Chose file
      </span>
      <input
        class="sc-hKgILt gCeYRd"
        type="file"
      />
    </label>
  </div>
</div>
`;

exports[`FileInput component should render with not-allowed cursor when it is disabled 1`] = `
<div>
  <div
    class="sc-iBPRYJ fScuuL"
    disabled=""
  >
    <label
      class="sc-bdfBwQ gowKKC"
      disabled=""
    />
    <label
      class="sc-gKsewC iqZIkL"
      disabled=""
    >
      <span
        class="sc-jSgupP hYGisR"
        disabled=""
      >
        Browse
      </span>
      <span
        class="sc-eCssSg eOtcvt"
        disabled=""
      >
        Chose file
      </span>
      <input
        class="sc-hKgILt gCeYRd"
        type="file"
      />
    </label>
  </div>
</div>
`;
